--- a/kBs/rails-deployment.yaml
+++ b/kBs/rails-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: web
-        image: yourusername/rails-app:latest
+        image: deekshant007/rails-app:latest
         ports:
         - containerPort: 3000
